login and registeration

--- a/FoodApp/appsettings.json
+++ b/FoodApp/appsettings.json
@@ -9,6 +9,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "myconn": "Data Source=.;Initial Catalog=OnlineFood;User ID=sa;Password=123456789",
-    "UserDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=FoodApp;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"UserDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=FoodApp;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
