--- a/FoodApp/FoodApp.csproj
+++ b/FoodApp/FoodApp.csproj
@@ -68,4 +68,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Areas\" />
+  </ItemGroup>
+
 </Project>
